RESOLVED FIXED276627
[tvOS] File upload panel is invisible and cannot be dismissed
https://bugs.webkit.org/show_bug.cgi?id=276627
Summary [tvOS] File upload panel is invisible and cannot be dismissed
Aditya Keerthi
Reported 2024-07-15 14:41:34 PDT
Attachments
Aditya Keerthi
Comment 1 2024-07-15 14:45:53 PDT
EWS
Comment 2 2024-07-15 17:25:25 PDT
Committed 280994@main (6050042505a6): <https://commits.webkit.org/280994@main> Reviewed commits have been landed. Closing PR #30835 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.