[tvOS] File upload panel is invisible and cannot be dismissed https://bugs.webkit.org/show_bug.cgi?id=276627 rdar://127010503

Reviewed by Richard Robinson and Wenson Hsieh.

* Source/WebKit/UIProcess/ios/forms/WKFileUploadPanel.mm:

Disable presentation of the file upload panel on tvOS.

Canonical link: https://commits.webkit.org/280994@main